--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
     style="@style/SCREEN"
     tools:context=".MainActivity">
 
@@ -20,7 +19,7 @@
         style="@style/SCREEN"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:padding="10dp" />
+        />
     <LinearLayout
         android:id="@+id/bottom"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,44 +41,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            >
+            android:layout_marginBottom="6dp"
+            android:gravity="center_vertical">
+
             <ImageView
+                android:layout_marginTop="3dp"
                 android:id="@+id/btn_home"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/img"
+                android:layout_height="37dp"
                 android:layout_weight="1"
-                />
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:src="@drawable/home" />
 
-                android:src="@drawable/img_1"
-                android:layout_weight="1"
-                />
             <ImageView
+                android:layout_marginTop="3dp"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/img_2"
+                android:layout_height="37dp"
+                android:src="@drawable/search"
+                android:layout_weight="1" />
 
-                android:layout_weight="1"
-                />
             <ImageView
+                android:layout_marginTop="3dp"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/img_3"
+                android:layout_height="37dp"
+                android:src="@drawable/add"
+                android:layout_weight="1" />
 
-                android:layout_weight="1"
-                />
             <ImageView
+                android:layout_marginTop="3dp"
+                android:layout_width="40dp"
+                android:layout_height="37dp"
+                android:src="@drawable/heart"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_marginTop="3dp"
                 android:id="@+id/btn_profile"
-
                 android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/img_4"
-                android:layout_weight="1"
-                />
+                android:layout_height="37dp"
+                android:src="@drawable/person"
+                android:layout_weight="1" />
 
 
         </LinearLayout>
