--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,15 +10,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:padding="10dp"
+        android:layout_height="60dp"
+        android:padding="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/camera"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -26,9 +26,8 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:layout_width="40dp"
-
-            android:layout_height="40dp"
+            android:layout_width="37dp"
+            android:layout_height="37dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/tv"
@@ -40,7 +39,6 @@
             android:id="@+id/air"
             android:layout_width="30dp"
             android:layout_height="30dp"
-
             android:layout_marginBottom="10dp"
             android:src="@drawable/air"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,7 +52,7 @@
             android:text="Instagram"
             android:textColor="@color/black"
             style="@style/TEXT"
-            android:textSize="30sp"
+            android:textSize="28sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -73,10 +71,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/tool_bar">
-
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -86,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="0dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -133,7 +129,12 @@
 
         </HorizontalScrollView>
 
-
+        <View
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="#C1BDBD"
+            />
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -198,16 +199,24 @@
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
+                               android:scaleType="center"
                                android:src="@drawable/spider_man_1" />
 
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_weight="1"
+                               android:scaleType="center"
                                android:layout_height="wrap_content"
                                android:src="@drawable/spider_man_2" />
                        </LinearLayout>
 
                     </HorizontalScrollView>
+                <View
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:background="#C1BDBD"
+                    />
 
 
 
