--- a/app/src/main/res/layout/item_rv_2.xml
+++ b/app/src/main/res/layout/item_rv_2.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="2dp">
+    >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/image_rv_2"
         android:src="@drawable/ic_launcher_background"
-        android:scaleType="centerCrop"/>
+        />
 
 </LinearLayout>
