--- a/app/src/main/res/layout/rv_item_image.xml
+++ b/app/src/main/res/layout/rv_item_image.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <androidx.cardview.widget.CardView
-        android:backgroundTint="#68000000"
+
         android:id="@+id/image"
         app:cardCornerRadius="40dp"
         android:layout_gravity="center"
@@ -25,13 +25,13 @@
             android:id="@+id/image_rv_item"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="center"
             android:src="@drawable/ic_launcher_background"
             />
 
     </androidx.cardview.widget.CardView>
     </androidx.cardview.widget.CardView>
     <TextView
+        android:layout_gravity="center"
         android:id="@+id/txt_rv_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
